hphp/hack/test/typecheck/as_expression/callable.php.exp
File "callable.php", line 6, characters 9-29:
The "as" operator cannot be used with a function (Typing[4195])
